# LoWi-Player

./: README.md  SHOWCASE.md  WHITEPAPER.md  capacitor.config.ts  generate_builds.sh  metadata.json  package-lock.json  package.json  pc_receiver.py  server.ts
.github/workflows/: main.yml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: capacitor.config.json
android/app/src/main/assets/public/: index.html
android/app/src/main/cpp/: CMakeLists.txt
android/app/src/main/java/com/hifi/player/: MainActivity.java
android/app/src/main/res/values/: strings.xml
distribution/: BUILD_INSTRUCTIONS.md  DEBUGGING_GUIDE.md  auto_eq_engine.cpp  native_crash_handler.cpp
distribution/android/app/: build.gradle  proguard-rules.pro
distribution/android/app/src/main/: AndroidManifest.xml
distribution/macos/Runner/: Info.plist  Release.entitlements
ios/App/App/: Info.plist  capacitor.config.json
ios/App/App.xcodeproj/: project.pbxproj
ios/App/App/public/assets/: index-B0RodrWu.js  index-Dx78rW-u.css
presets/: harman_in_ear.txt
src/: App.tsx
